--- a/fam.toml
+++ b/fam.toml
@@ -1,4 +1,4 @@
 [crate]
 	bin = "result"
 [deps]
-	error = { git = "https://github.com/myfamilyorg/error", rev="db007d3927b1d23b6f0855005f6dc0e2938e8b45" }
+	error = { git = "https://github.com/myfamilyorg/error" }
